@@ -1,6 +1,7 @@
 package ptithcm.onlinejudge.controller.frontend.admin;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.repository.query.Param;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -10,11 +11,10 @@ import ptithcm.onlinejudge.mapper.StudentMapper;
 import ptithcm.onlinejudge.model.entity.Student;
 import ptithcm.onlinejudge.model.entity.SubjectClassGroup;
 import ptithcm.onlinejudge.model.response.ResponseObject;
-import ptithcm.onlinejudge.services.StudentManagementService;
-import ptithcm.onlinejudge.services.StudentOfGroupManagement;
-import ptithcm.onlinejudge.services.SubjectClassGroupManagementService;
+import ptithcm.onlinejudge.services.*;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Controller
@@ -22,42 +22,51 @@ import java.util.stream.Collectors;
 public class AdminSubjectClassGroupStudentController {
     @Autowired
     private StudentMapper studentMapper;
-
+    @Autowired
+    private SubjectManagementService subjectManagementService;
+    @Autowired
+    private SubjectClassManagementService subjectClassManagementService;
     @Autowired
     private SubjectClassGroupManagementService subjectClassGroupManagementService;
-
     @Autowired
     private StudentManagementService studentManagementService;
-
     @Autowired
     private StudentOfGroupManagement studentOfGroupManagement;
 
     @GetMapping("")
+    public String showStudentOfGroup(@PathVariable("subjectId") String subjectId,
+                                     @PathVariable("classId") String classId,
+                                     @PathVariable("groupId") String groupId) {
+        if (!checkValid(subjectId, classId, groupId))
+            return "redirect:/error";
+        return "redirect:/admin/subject/{subjectId}/class/{classId}/group/{groupId}/student/page/1";
+    }
+
+    @GetMapping("/page/{page}")
     public String showStudentManagementPage(@PathVariable("subjectId") String subjectId,
                                             @PathVariable("classId") String classId,
                                             @PathVariable("groupId") String groupId,
+                                            @PathVariable("page") int page,
+                                            @Param("keyword") String keyword,
                                             Model model) {
-        model.addAttribute("pageTitle", "Sinh viên nhóm");
-        List<StudentDTO> students = ((List<Student>) studentManagementService.getStudentsOfGroup(groupId).getData())
-                .stream().map(item -> studentMapper.entityToDTO(item)).toList();
+        if (!checkValid(subjectId, classId, groupId))
+            return "redirect:/error";
+        model.addAttribute("pageTitle", "Sinh viên của nhóm");
+        Map<String, Object> response = (Map<String, Object>) studentManagementService.getStudentsOfGroup(groupId, page).getData();
+        if (keyword != null && !keyword.trim().isEmpty()) {
+            response = (Map<String, Object>) studentManagementService.searchStudentsOfGroupByKeyword(groupId, keyword, page).getData();
+            model.addAttribute("keyword", keyword);
+        }
+        List<StudentDTO> students = getStudents(response).stream().map(item -> studentMapper.entityToDTO(item)).collect(Collectors.toList());
+        int currentPage = (int) response.getOrDefault("currentPage", 0);
+        int totalPages = (int) response.getOrDefault("totalPages", 0);
+        String pageUrlPrefix = String.format("/admin/subject/%s/class/%s/group/%s/student", subjectId, classId, groupId);
         SubjectClassGroup group = (SubjectClassGroup) subjectClassGroupManagementService.getGroupById(groupId).getData();
         model.addAttribute("groupName", group.getSubjectClassGroupName());
         model.addAttribute("students", students);
-        return "/admin/subject/student-of-group";
-    }
-
-    @PostMapping("")
-    public String searchStudent(@PathVariable("subjectId") String subjectId,
-                                @PathVariable("classId") String classId,
-                                @PathVariable("groupId") String groupId,
-                                @RequestParam("keyword") String keyword,
-                                Model model) {
-        model.addAttribute("pageTitle", "Sinh viên nhóm");
-        List<StudentDTO> students = ((List<Student>) studentManagementService.searchStudentsOfGroupById(groupId, keyword).getData())
-                .stream().map(item -> studentMapper.entityToDTO(item)).toList();
-        SubjectClassGroup group = (SubjectClassGroup) subjectClassGroupManagementService.getGroupById(groupId).getData();
-        model.addAttribute("groupName", group.getSubjectClassGroupName());
-        model.addAttribute("students", students);
+        model.addAttribute("currentPage", currentPage);
+        model.addAttribute("totalPages", totalPages);
+        model.addAttribute("pageUrlPrefix", pageUrlPrefix);
         return "/admin/subject/student-of-group";
     }
 
@@ -66,6 +75,8 @@ public class AdminSubjectClassGroupStudentController {
                                          @PathVariable("classId") String classId,
                                          @PathVariable("groupId") String groupId,
                                          @PathVariable("studentId") String studentId) {
+        if (!checkValid(subjectId, classId, groupId))
+            return "redirect:/error";
         ResponseObject removeStudentFromGroupResponse = studentOfGroupManagement.deleteStudentFromGroup(studentId, groupId);
         if (!removeStudentFromGroupResponse.getStatus().equals(HttpStatus.OK))
             return "redirect:/error";
@@ -73,28 +84,38 @@ public class AdminSubjectClassGroupStudentController {
     }
 
     @GetMapping("/add")
+    public String showAddStudentToGroup(@PathVariable("subjectId") String subjectId,
+                                        @PathVariable("classId") String classId,
+                                        @PathVariable("groupId") String groupId) {
+        if (!checkValid(subjectId, classId, groupId))
+            return "redirect:/error";
+        return "redirect:/admin/subject/{subjectId}/class/{classId}/group/{groupId}/student/add/page/1";
+    }
+
+    @GetMapping("/add/page/{page}")
     public String showAddStudentToGroupPage(@PathVariable("subjectId") String subjectId,
                                             @PathVariable("classId") String classId,
                                             @PathVariable("groupId") String groupId,
+                                            @PathVariable("page") int page,
+                                            @Param("keyword") String keyword,
                                             Model model) {
+        if (!checkValid(subjectId, classId, groupId))
+            return "redirect:/error";
         model.addAttribute("pageTitle", "Thêm sinh viên vào nhóm");
-        List<StudentDTO> students = ((List<Student>) studentManagementService.getStudentsNotInClass(classId).getData())
-                .stream().map(item -> studentMapper.entityToDTO(item)).collect(Collectors.toList());
+        Map<String, Object> response = (Map<String, Object>) studentManagementService.getStudentsNotInClass(classId, page).getData();
+        if (keyword != null && !keyword.trim().isEmpty()) {
+            response = (Map<String, Object>) studentManagementService.searchStudentsNotInClassByKeyword(classId, keyword, page).getData();
+            model.addAttribute("keyword", keyword);
+        }
+        List<StudentDTO> students = getStudents(response).stream().map(item -> studentMapper.entityToDTO(item)).collect(Collectors.toList());
+        int currentPage = (int) response.getOrDefault("currentPage", 0);
+        int totalPages = (int) response.getOrDefault("totalPages", 0);
+        String pageUrlPrefix = String.format("/admin/subject/%s/class/%s/group/%s/student/add", subjectId, classId, groupId);
         model.addAttribute("students", students);
+        model.addAttribute("currentPage", currentPage);
+        model.addAttribute("totalPages", totalPages);
+        model.addAttribute("pageUrlPrefix", pageUrlPrefix);
         return "admin/subject/student-of-group-add-student";
-    }
-
-    @PostMapping("/add")
-    public String searchStudentsNotInClassById(@PathVariable("subjectId") String subjectId,
-                                               @PathVariable("classId") String classId,
-                                               @PathVariable("groupId") String groupId,
-                                               @RequestParam("keyword") String keyword,
-                                               Model model) {
-        model.addAttribute("pageTitle", "Thêm sinh viên vào nhóm");
-        List<StudentDTO> students = ((List<Student>) studentManagementService.searchStudentsNotInClassById(classId, keyword).getData())
-                .stream().map(item -> studentMapper.entityToDTO(item)).collect(Collectors.toList());
-        model.addAttribute("students", students);
-        return "/admin/subject/student-of-group-add-student";
     }
 
     @GetMapping("/{studentId}/add")
@@ -102,9 +123,22 @@ public class AdminSubjectClassGroupStudentController {
                                             @PathVariable("classId") String classId,
                                             @PathVariable("groupId") String groupId,
                                             @PathVariable("studentId") String studentId) {
+        if (!checkValid(subjectId, classId, groupId))
+            return "redirect:/error";
         ResponseObject addStudentToGroupResponse = studentOfGroupManagement.addStudentToGroup(studentId, groupId);
         if (!addStudentToGroupResponse.getStatus().equals(HttpStatus.OK))
             return "redirect:/error";
         return "redirect:/admin/subject/{subjectId}/class/{classId}/group/{groupId}/student/add";
+    }
+
+    private boolean checkValid(String subjectId, String classId, String groupId) {
+        ResponseObject getSubjectRes = subjectManagementService.getSubjectById(subjectId);
+        ResponseObject getClassRes = subjectClassManagementService.getClassById(classId);
+        ResponseObject getGroupRes = subjectClassGroupManagementService.getGroupById(groupId);
+        return getSubjectRes.getStatus().equals(HttpStatus.OK) && getClassRes.getStatus().equals(HttpStatus.OK) && getGroupRes.getStatus().equals(HttpStatus.OK);
+    }
+
+    private List<Student> getStudents(Map<String, Object> response) {
+        return (List<Student>) response.getOrDefault("data", null);
     }
 }
