@@ -1,10 +1,12 @@
 package ptithcm.onlinejudge.controller.frontend.admin;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.repository.query.Param;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
+import ptithcm.onlinejudge.dto.StudentDTO;
 import ptithcm.onlinejudge.dto.TeacherDTO;
 import ptithcm.onlinejudge.mapper.TeacherMapper;
 import ptithcm.onlinejudge.model.entity.Teacher;
@@ -12,6 +14,7 @@ import ptithcm.onlinejudge.model.response.ResponseObject;
 import ptithcm.onlinejudge.services.TeacherManagementService;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Controller
@@ -23,12 +26,25 @@ public class AdminTeacherController {
     private TeacherManagementService teacherManagementService;
     @GetMapping("")
     public String showTeacherManagementPage(Model model) {
+        return "redirect:/admin/teacher/page/1";
+    }
+
+    @GetMapping("/page/{page}")
+    public String showTeacherPaginationPage(@PathVariable("page") int page, @Param("keyword") String keyword, Model model) {
         model.addAttribute("pageTitle", "Giáo viên");
-        List<TeacherDTO> teachers = ((List<Teacher>) teacherManagementService.getAllTeachersExceptAdmin().getData())
-                .stream().map(item -> teacherMapper.entityToDTO(item)).collect(Collectors.toList());
-        TeacherDTO teacherAdd = new TeacherDTO();
+        Map<String, Object> response = (Map<String, Object>) teacherManagementService.getAllTeachersExceptAdmin(page).getData();
+        if (keyword != null && !keyword.trim().isEmpty()) {
+            response = (Map<String, Object>) teacherManagementService.searchTeachersByKeyWordExceptAdmin(keyword, page).getData();
+            model.addAttribute("keyword", keyword);
+        }
+        List<TeacherDTO> teachers = getTeachers(response).stream().map(item -> teacherMapper.entityToDTO(item)).toList();
+        int currentPage = (int) response.getOrDefault("currentPage", 0);
+        int totalPages = (int) response.getOrDefault("totalPages", 0);
+        model.addAttribute("teacherAdd", new TeacherDTO());
         model.addAttribute("teachers", teachers);
-        model.addAttribute("teacherAdd", teacherAdd);
+        model.addAttribute("pageUrlPrefix", "/admin/teacher");
+        model.addAttribute("currentPage", currentPage);
+        model.addAttribute("totalPages", totalPages);
         return "/admin/teacher/teacher";
     }
 
@@ -40,34 +56,10 @@ public class AdminTeacherController {
         return "redirect:/admin/teacher";
     }
 
-    @PostMapping("")
-    public String showTeacherAfterSearching(Model model, @RequestParam("keyword") String keyword) {
-        model.addAttribute("pageTitle", "Giáo viên");
-        List<TeacherDTO> teachers = ((List<Teacher>) teacherManagementService.searchTeachersByKeyWordExceptAdmin(keyword).getData())
-                .stream().map(item -> teacherMapper.entityToDTO(item)).toList();
-        TeacherDTO teacherAdd = new TeacherDTO();
-        model.addAttribute("keyword", keyword);
-        model.addAttribute("teachers", teachers);
-        model.addAttribute("teacherAdd", teacherAdd);
-        return "/admin/teacher/teacher";
-    }
-
     // edit
-
-    @GetMapping("/{id}/edit")
-    public String showEditTeacherPage(@PathVariable("id") String teacherId, Model model) {
-        model.addAttribute("pageTitle", "Chỉnh sửa giáo viên");
-        ResponseObject getTeacherByIdResponse = teacherManagementService.getTeacherById(teacherId);
-        if (!getTeacherByIdResponse.getStatus().equals(HttpStatus.OK))
-            return "redirect:/error";
-        TeacherDTO teacherDTO = teacherMapper.entityToDTO((Teacher) getTeacherByIdResponse.getData());
-        model.addAttribute("teacher", teacherDTO);
-        return "/admin/teacher/teacher-edit";
-    }
-
-    @PostMapping("/{id}/edit")
-    public String editTeacher(@PathVariable("id") String teacherId, @ModelAttribute("teacher") TeacherDTO teacherDTO) {
-        ResponseObject editTeacherResponse = teacherManagementService.editTeacher(teacherId, teacherDTO);
+    @PostMapping("/edit")
+    public String editTeacher(TeacherDTO teacherDTO) {
+        ResponseObject editTeacherResponse = teacherManagementService.editTeacher(teacherDTO);
         if (!editTeacherResponse.getStatus().equals(HttpStatus.OK))
             return "redirect:/error";
         return "redirect:/admin/teacher";
@@ -98,5 +90,9 @@ public class AdminTeacherController {
         if (!lockTeacherResponse.getStatus().equals(HttpStatus.OK))
             return "redirect:/error";
         return "redirect:/admin/teacher";
+    }
+
+    private List<Teacher> getTeachers(Map<String, Object> response) {
+        return (List<Teacher>) response.getOrDefault("data", null);
     }
 }
